WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157369
event.target shouldn't be retargeted as the event bubbles into a slot
https://bugs.webkit.org/show_bug.cgi?id=157369
Summary
event.target shouldn't be retargeted as the event bubbles into a slot
Ryosuke Niwa
Reported
2016-05-04 20:22:28 PDT
When an event bubbles up from an assigned node to its assigned slot, we shouldn't be adjusting event.target to point to the slot. Since a shadow tree should have access to nodes outside the shadow tree, event.target should be accessible inside the shadow tree of such a slot.
Attachments
Fixes the bug
(28.01 KB, patch)
2016-05-04 21:03 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Patch for landing
(27.98 KB, patch)
2016-05-05 09:16 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Patch for landing
(28.58 KB, patch)
2016-05-05 09:42 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Patch for landing
(28.58 KB, patch)
2016-05-05 10:05 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2016-05-04 21:03:02 PDT
Created
attachment 278154
[details]
Fixes the bug
Antti Koivisto
Comment 2
2016-05-05 05:32:27 PDT
Comment on
attachment 278154
[details]
Fixes the bug r=me, nice that this behavior change simplifies the logic.
Antti Koivisto
Comment 3
2016-05-05 05:33:28 PDT
Please fix build with shadow DOM disabled before landing.
Ryosuke Niwa
Comment 4
2016-05-05 09:16:18 PDT
Created
attachment 278167
[details]
Patch for landing
Ryosuke Niwa
Comment 5
2016-05-05 09:16:38 PDT
Comment on
attachment 278167
[details]
Patch for landing Wait for EWS.
Ryosuke Niwa
Comment 6
2016-05-05 09:42:17 PDT
Created
attachment 278169
[details]
Patch for landing
Ryosuke Niwa
Comment 7
2016-05-05 10:05:47 PDT
Created
attachment 278172
[details]
Patch for landing
WebKit Commit Bot
Comment 8
2016-05-05 11:32:38 PDT
Comment on
attachment 278172
[details]
Patch for landing Clearing flags on attachment: 278172 Committed
r200464
: <
http://trac.webkit.org/changeset/200464
>
WebKit Commit Bot
Comment 9
2016-05-05 11:32:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10
2016-05-05 13:03:12 PDT
<
rdar://problem/26123016
>
Ryosuke Niwa
Comment 11
2016-05-05 14:32:36 PDT
iOS build fixes:
https://trac.webkit.org/changeset/200477
https://trac.webkit.org/changeset/200478
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug