Source/WebCore/dom/EventPath.h
@@ -48,9 +48,9 @@ public:
 
     EventContext* lastContextIfExists() { return m_path.isEmpty() ? nullptr : m_path.last().get(); }
 
-    Vector<EventTarget*> computePathDisclosedToTarget(const EventTarget&) const;
+    Vector<EventTarget*> computePathUnclosedToTarget(const EventTarget&) const;
 
-    static EventTarget* eventTargetRespectingTargetRules(Node& referenceNode)
+    static Node* eventTargetRespectingTargetRules(Node& referenceNode)
     {
         if (is<PseudoElement>(referenceNode))
             return downcast<PseudoElement>(referenceNode).hostElement();
